add string enum
